@@ -1,5 +1,9 @@
 2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>
 
+	Make use of schemas moving keys from /apps/sok to /apps/onboard.
+
+2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>
+
 	Add gconf schemas file.
 
 2008-11-08 Francesco Fumanti <francesco.fumanti@gmx.net>
